
plugins {
    id 'java-library'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
}

repositories {
    jcenter()
}

dependencies {
    implementation 'org.apache.poi:poi-ooxml:4.1.2'
    implementation 'org.apache.poi:poi-ooxml-schemas:4.1.2'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.7.1'
}

test {
    useJUnitPlatform()
}

sourceCompatibility = "16"
targetCompatibility = "16"

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

javafx {
    version = "16"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

mainClassName = 'xyz.hotchpotch.hogandiff.AppMain'

// MacOS向け.appバンドル用のパラメータ
def libBase = '../PlugIns/lib/'
def classPath = '' \
    + libBase + 'poi-4_1_2/poi-4.1.2.jar ' \
    + libBase + 'poi-4_1_2/poi-ooxml-4.1.2.jar ' \
    + libBase + 'poi-4_1_2/poi-ooxml-schemas-4.1.2.jar ' \
    + libBase + 'poi-4_1_2/lib/commons-codec-1.13.jar ' \
    + libBase + 'poi-4_1_2/lib/commons-collections4-4.4.jar ' \
    + libBase + 'poi-4_1_2/lib/commons-compress-1.19.jar ' \
    + libBase + 'poi-4_1_2/lib/commons-math3-3.6.1.jar ' \
    + libBase + 'poi-4_1_2/lib/SparseBitSet-1.2.jar ' \
    + libBase + 'poi-4_1_2/ooxml-lib/xmlbeans-3.1.0.jar'

jar {
    manifest {
        attributes (
            "Main-Class": mainClassName,
            "Class-Path": classPath)
    }
}
